<?xml version="1.0"?>
<package>
  <name>console_bridge</name>
  <version>0.3.2</version>
  <description>
      A ROS-independent package for logging that seamlessly pipes into rosconsole/rosout for ROS-dependent packages.
  </description>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>

  <author>Wim Meeussen</author>
  <author>John Hsu</author>
  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="bugtracker">https://github.com/ros/urdfdom/issues</url>
  <url type="repository">https://github.com/ros/urdfdom</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
